general styling and small changes in index.html Relates #1

--- a/index.html
+++ b/index.html
@@ -7,17 +7,22 @@
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
+    <div class="logo">
+      <img src="/img/logo.JPG" alt="" />
+    </div>
     <div class="container">
       <div class="inputContainer">
         <input type="text" class="input" />
-        <button class="addButton">Add</button>
+        <button class="addButton">
+          <img src="/img/add.JPG" alt="add button" width="30px" />
+        </button>
       </div>
       <ul>
         <li>
           <label for="example">
             <input type="checkbox" id="example" /> hello
-            <span>delete</span></label
-          >
+          </label>
+          <span class="delete">delete</span>
         </li>
       </ul>
     </div>
