Can add and remove notes and they are saved in local storage

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button class="addButton">Add</button>
       </div>
       <ul>
-        <li>
+        <li id="s">
           <label for="example">
             <input type="checkbox" id="example" /> hello
             <span>delete</span></label
@@ -22,5 +22,7 @@
       </ul>
     </div>
   </body>
-  <script src="index.js"></script>
+  <script src="./src/data.js"></script>
+  <script src="./src/storage.js"></script>
+  <script src="./index.js"></script>
 </html>
