add button updating the dom

--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
   <body>
     <div class="container">
       <div class="inputContainer">
-        <input type="text" class="input" />
+        <input type="text" class="input" placeholder="Add a To-Do"/>
         <button class="addButton">Add</button>
       </div>
-      <ul>
-        <li>
-          <label for="example">
-            <input type="checkbox" id="example" /> hello
-            <span>delete</span></label
-          >
+      <ul class="list">
+        <li class="item">
+          <label for="example"><input type="checkbox"/>hello<span>delete</span></label>
         </li>
       </ul>
     </div>
