--- a/index.html
+++ b/index.html
@@ -8,23 +8,16 @@
   </head>
   <body>
     <div class="logo">
-      <img src="/img/logo.JPG" alt="" />
+      <img src="./img/logo.jpg" alt="" />
     </div>
     <div class="container">
       <div class="inputContainer">
         <input type="text" class="input" />
-        <button class="addButton" >
-          <img src="/img/add.JPG" alt="add button" width="30px" />
+        <button class="addButton">
+          <img src="./img/add.jpg" alt="add button" width="30px" />
         </button>
       </div>
-      <ul>
-        <!-- <li id="s">
-          <label for="example">
-            <input type="checkbox" id="example" /> hello
-          </label>
-          <span class="delete">delete</span>
-        </li> -->
-      </ul>
+      <ul></ul>
     </div>
   </body>
   <script src="./src/data.js"></script>
