--- a/index.html
+++ b/index.html
@@ -23,4 +23,6 @@
   <script src="./src/data.js"></script>
   <script src="./src/storage.js"></script>
   <script src="./index.js"></script>
+  <script src="./test-helpers.js"></script>
+  <script src="./index.test.js"></script>
 </html>
